--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Age</h1></h1> <p> : 23</p><br>
     <h1>place</h1><p> : Kilapalayam</p><br>
     <h1>Hobbies</h1><p> : Biking, Swimming, Reading</p><br>
-    <h1>Current Location</h1><p> : Bengaluru</p>
+    <h1>Current Location</h1><p> : Bengaluru, Karnataka</p>
 
 </body>
 </html>
