--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Name</body></h1> <p> : Nitish</p><br>
-    <h1>Age</h1></h1> <p> : 23</p><br>
-    <h1>place</h1><p> : Kilapalayam</p><br>
-    <h1>Hobbies</h1><p> : Biking, Swimming, Reading</p><br>
-    <h1>Current Location</h1><p> : Electronic City, Karnataka</p>
-
+    <h1>Refer console for result</h1>
+    <script src = "/script.js"></script>
 </body>
 </html>
